tests/paczka1/fuzzy1/40859013.err
Error in line 5: pxvswVPFy9M S414 87,7
Error in line 1: dQud1 S553 73,1
Error in line 11: A659 S414 66,7
Error in line 20: 5NwcxRHnYZ A14 99,0
Error in line 28: Wjf5mqMqBA A14 54,2
Error in line 34: A659 A14 -6,2
Error in line 29: dQud1 S553 54,6
Error in line 37: dQud1 A14 73,9
